test/earlyReturn.slq

def foo(const x:ğ”¹){
	if x{
		return 1:!ğ”¹;
	}else{
		return 0:!ğ”¹;
	}
}
def main(){
	x:=H(0:ğ”¹);
	while foo(x){} /// error
	return x;
}
